syntax = "proto3";

package com.tej.protojunc.p2p.signaling.protocol;

option java_package = "com.tej.protojunc.p2p.signaling.protocol";
option java_multiple_files = true;

message SignalingPayload {
  enum Type {
    UNKNOWN = 0;
    JOIN = 1;
    OFFER = 2;
    ANSWER = 3;
    ICE_CANDIDATE = 4;
    BYE = 5;
    MESSAGE = 6;
    VOICE_CALL = 7;
    VIDEO_CALL = 8;
  }
  
  Type type = 1;
  string sdp = 2;
  string ice_candidate = 3;
  string sdp_mid = 4;
  int32 sdp_m_line_index = 5;
  string sender_id = 6;
}
